--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,30 @@
 version: 2.1
 orbs:
-  node: circleci/node@5.0.1
+  docker: circleci/docker@2.2.0
+executors:
+  docker-publisher:
+  environment:
+  IMAGE_NAME: wilsonlimdocker90/education-space:latest
+  docker:
+    - image: docker:stable
+  auth:
+  username: wilsonlimdocker90
+  password: Birdbirdman90@
 jobs:
-  build:
-    docker:
-      - image: cimg/node:16.10
-    steps:
-      - checkout
-      - node/install-packages:
-          pkg-manager: npm
-      - run: |
-          echo "Installing dependencies..."
-          npm install
-  test:
-    docker:
-      - image: cimg/node:16.10
-    steps:
-      - checkout
-      - node/install-packages:
-          pkg-manager: npm
-      - run: |
-          echo "Running tests..."
-          npm run test
-
+ publishLatestToHub: 
+ executor: docker-publisher
+ 
+ steps: 
+ — checkout
+ — setup_remote_docker
+ — run: 
+ name: Publish Docker Image to Docker Hub
+ command: |
+ echo “$DOCKERHUB_PASSWORD” | docker login -u “$DOCKERHUB_USERNAME” — password-stdin
+ docker build -t $IMAGE_NAME .
+ docker push $IMAGE_NAME:latest
 workflows:
-  simple_workflow:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
+ version: 2
+ build-master:
+ jobs:
+ — publishLatestToHub
