--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,25 +4,24 @@ orbs:
 executors:
   docker-publisher:
   environment:
-  IMAGE_NAME: wilsonlimdocker90/education-space:latest
+  IMAGE_TAG: wilsonlimdocker90/education-space:latest
   docker:
     - image: docker:stable
-  auth:
-  username: wilsonlimdocker90
-  password: 
+   auth:
+   username: $DOCKERHUB_USERNAME
+   password: $DOCKERHUB_PASSWORD
 jobs:
- publishLatestToHub: 
- executor: docker-publisher
- 
+ build:
+   executor: docker-publisher
  steps: 
  — checkout
  — setup_remote_docker
  — run: 
- name: Publish Docker Image to Docker Hub
- command: |
- echo “$DOCKERHUB_PASSWORD” | docker login -u “$DOCKERHUB_USERNAME” — password-stdin
- docker build -t $IMAGE_NAME .
- docker push $IMAGE_NAME:latest
+   name: Publish Docker Image to Docker Hub
+   command: |
+   echo “$DOCKERHUB_PASSWORD” | docker login -u “$DOCKERHUB_USERNAME” — password-stdin
+   docker build -t $IMAGE_NAME .
+   docker push $IMAGE_NAME:latest
 workflows:
  version: 2
  build-master:
