--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,30 @@
 version: 2.1
+
 orbs:
   docker: circleci/docker@2.2.0
+
 executors:
- docker-publisher: 
- environment:
- IMAGE_NAME: wilsonlimdocker90/education-space
- docker: # Each job requires specifying an executor
- # (either docker, macos, or machine), see
- — image: circleci/node:latest
- auth:
- username: $DOCKERHUB_USERNAME
- password: $DOCKERHUB_PASSWORD
+  docker-publisher:
+    environment:
+      IMAGE_NAME: wilsonlimdocker90/education-space
+    docker: # Each job requires specifying an executor
+      - image: circleci/node:latest
+
 jobs:
- publishLatestToHub: 
- executor: docker-publisher
- 
- steps: 
- — checkout
- — setup_remote_docker
- — run: 
- name: Publish Docker Image to Docker Hub
- command: |
- echo “$DOCKERHUB_PASSWORD” | docker login -u “$DOCKERHUB_USERNAME” — password-stdin
- docker build -t $IMAGE_NAME .
- docker push $IMAGE_NAME:latest
+  publishLatestToHub:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker build -t $IMAGE_NAME .
+            docker push $IMAGE_NAME:latest
+
 workflows:
- version: 2
- build-master:
- jobs:
- — publishLatestToHub
+  version: 2
+  build-master:
+    jobs:
+      - publishLatestToHub
