--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,17 +4,9 @@ orbs:
   docker: circleci/docker@2.2.0
 
 jobs:
-  test:
-    docker:
-      - image: wilsonlimdocker90/education-space
-    steps:
-      - checkout
-      # Add your test steps here
-      - run: echo "Running tests..."
-
   publish:
     docker:
-      - image: wilsonlimdocker90/education-space
+      - image: REACT
     steps:
       - checkout
       - setup_remote_docker
@@ -26,17 +18,11 @@ jobs:
           name: Build and publish Docker image
           command: |
             docker build -t my-docker-image:latest .
-            docker tag my-docker-image:latest $DOCKERHUB_USERNAME/my-docker-image:latest
-            docker push $DOCKERHUB_USERNAME/my-docker-image:latest
+            docker tag my-docker-image:latest wilsonlimdocker90/education-space:latest
+            docker push wilsonlimdocker90/education-space:latest
 
 workflows:
   version: 2
   build-and-publish:
     jobs:
-      - test
-      - publish:
-          requires:
-            - test
-          filters:
-            branches:
-              only: master
+      - publish
