--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,26 +3,28 @@ version: 2.1
 orbs:
   docker: circleci/docker@2.2.0
 
-jobs:
-  publish:
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_NAME: wilsonlimdocker90/education-space
     docker:
-      - image: wilsonlimdocker90/education-space
+      - image: circleci/node:latest
+
+jobs:
+  publishLatestToHub:
+    executor: docker-publisher
     steps:
       - checkout
       - setup_remote_docker
       - run:
-          name: Login to Docker Hub
+          name: Publish Docker Image to Docker Hub
           command: |
-            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-      - run:
-          name: Build and publish Docker image
-          command: |
-            docker build -t my-docker-image:latest .
-            docker tag my-docker-image:latest wilsonlimdocker90/education-space:latest
-            docker push wilsonlimdocker90/education-space:latest
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker build -t $IMAGE_NAME .
+            docker push $IMAGE_NAME:latest
 
 workflows:
   version: 2
-  build-and-publish:
+  build-master:
     jobs:
-      - publish
+      - publishLatestToHub
