--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ executors:
     environment:
       IMAGE_NAME: wilsonlimdocker90/education-space
     docker:
-      - image: circleci/node:latest
+      - image: cimg/node:16.10
 
 jobs:
   publishLatestToHub:
