--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,11 +31,13 @@ jobs:
       - checkout
       - docker/check
       - docker/build:
-          image: wilsonlimdocker90/education-space:${CIRCLE_TAG}
+          image: wilsonlimdocker90/education-space
+          tag: ${CIRCLE_TAG}
           # image: wilsonlimdocker90/education-space
           # tag: 0.1.0
       - docker/push:
-          image: wilsonlimdocker90/education-space:${CIRCLE_TAG}
+          image: wilsonlimdocker90/education-space
+          tag: ${CIRCLE_TAG}
           # image: wilsonlimdocker90/education-space
           # # tag: 0.1.0
   # deploy:
