--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,12 +32,12 @@ jobs:
       - docker/check
       - docker/build:
           image: wilsonlimdocker90/education-space
-          tag: ${CIRCLE_TAG}
+          tag: << pipeline.git.tag >> 
           # image: wilsonlimdocker90/education-space
           # tag: 0.1.0
       - docker/push:
           image: wilsonlimdocker90/education-space
-          tag: ${CIRCLE_TAG}
+          tag: << pipeline.git.tag >> 
           # image: wilsonlimdocker90/education-space
           # # tag: 0.1.0
   # deploy:
