--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,14 +33,14 @@ jobs:
       - run:
         name: Replace slashes in tag
         command: |
-          export TAG=$(echo "<< pipeline.git.tag >>" | tr '/' '-')
+          export TAG=$(echo "<< pipeline.git.tag >>" | sed 's/\//-/')
           echo $TAG
       - docker/build:
-          image: wilsonlimdocker90/education-space:${TAG}
+          image: wilsonlimdocker90/education-space:<< pipeline.git.tag >>
           # image: wilsonlimdocker90/education-space
           # tag: 0.1.0
       - docker/push:
-          image: wilsonlimdocker90/education-space:${TAG}
+          image: wilsonlimdocker90/education-space:<< pipeline.git.tag >>
           # image: wilsonlimdocker90/education-space
           # # tag: 0.1.0
   # deploy:
