--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,10 @@ jobs:
       - checkout
       - docker/check
       - run:
-        name: Publish Docker Image to Docker Hub
-        command: |
-          docker build -t wilsonlimdocker90/education-space:<< pipeline.git.tag >> .
-          docker push wilsonlimdocker90/education-space:<< pipeline.git.tag >>
+          name: Publish Docker Image to Docker Hub
+          command: |
+            docker build -t wilsonlimdocker90/education-space:<< pipeline.git.tag >> 
+            docker push wilsonlimdocker90/education-space:<< pipeline.git.tag >>
       # - docker/build:
       #     image: wilsonlimdocker90/education-space
       #     tag: << pipeline.git.tag >>
