--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,8 @@ jobs:
           npm run test
   build-and-push:
     executor: docker/docker
+    environment:
+      TAG: << pipeline.git.tag >>
     steps:
       - setup_remote_docker
       - checkout
@@ -33,8 +35,8 @@ jobs:
       - run:
           name: Publish Docker Image to Docker Hub
           command: |
-            docker build -t wilsonlimdocker90/education-space:${CIRCLE_TAG//v/} .
-            docker push wilsonlimdocker90/education-space:${CIRCLE_TAG//v/}
+            docker build -t wilsonlimdocker90/education-space:$TAG .
+            docker push wilsonlimdocker90/education-space:$TAG
       # - docker/build:
       #     image: wilsonlimdocker90/education-space
       #     tag: << pipeline.git.tag >>
