--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,11 @@ jobs:
         - run: docker build -t $IMAGE_NAME .
         - snyk/scan: 
             docker-image-name: $IMAGE_NAME
+            fail-on-issues: false
+            monitor-on-build: true
+            project: ${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-app
+            severity-threshold: low
+            token-variable: SNYK_TOKEN
 
 workflows:
   simple_workflow:
